单元测试问题修正